frontend/doc/archive/1.0/maintainer/guide.md
# 使用文档（维护者版）

> 本指南由维护者在原版《使用文档》基础上维护，记录本分支的功能说明与
> 后续变动，随功能更新持续修订。原版指南见"原版文档 > 使用指南"
> （作者：着火的冰块nya，GPLv3 许可）。
>
> **本版文档（v1.0）适用于软件版本 2.2.0。**

## 未知数

未知数名可以是：

- 一个小写英文字母（除 `x`, `y` 外）
- 一个希腊字母的英文拼写（除 `pi` 外）

## 点

点名需要是一个大写英文字母，不支持上下标。~~（应该没有哪道题需要用到超过 26 个点吧）~~

## 表达式

我们的表达式解析器基于 Python 的 `eval`~~（所以你可以注入任意代码攻击后端）~~，并增加了一些自己的设计。

### 运算

|    代码     |   含义   |
| :---------: | :------: |
|     `+`     |    加    |
|     `-`     |    减    |
|     `*`     |    乘    |
|     `/`     |    除    |
|    `dot`    | 向量点乘 |
| `^` 或 `**` |    幂    |

注意：乘号不能省略。

### 常量和函数

|  代码  | 含义  |
| :----: | :---: |
|  `pi`  | $\pi$ |
| `sqrt` | 根号  |
| `sin`  | 正弦  |
| `cos`  | 余弦  |
| `tan`  | 正切  |

注意：函数必须加括号调用。

- ❌ 错误示范：`sin pi`
- ✅️ 正确示范：`sin(pi)`

### 访问未知数

直接输入你在添加它们时的名字即可。

例如：`a`、`alpha`

### 访问点坐标

格式：x / y + 点名称

例如：`xA` 代表 $x_A$

### 线段长度

直接写线段名即可。

例如：`AB` 代表 $AB$

### 角

格式：ang + 确定角的三个点

例如：`angABC` 代表 $\angle ABC$

#### 角度制

用 `deg` 代表 $^{\circ}$

例如：`30 deg` 代表 $30^{\circ}$

### 向量

#### 有向线段表示的向量

格式：vec + 起点 + 终点

例如：`vecAB` 代表 $\overrightarrow{AB}$

#### 坐标表示的向量

格式：(x 分量, y 分量)

例如：`(114, 514)` 代表 $(114, 514)$

### 三角形面积

格式：St + 三角形三个点

例如：`StABC` 代表 $S_{\triangle ABC}$

### 直线的斜率 ($k$) 和截距 ($b$)

格式：k / b + 直线名

例如：`kAB` 代表直线 $AB$ 的斜率 $k_{AB}$

注意：你必须保证这条直线不可能是竖直的

### 点到直线距离

格式：d + 点名 + t + 直线名

例如：`dAtBC` 代表点 A 到直线 BC 的距离，记作 $d_{A\text{ 到 }BC}$

## FAQ

### 如何表示圆、抛物线等图形？

研究这些图形，本质上是在研究上面的点。你可以把一个点的横纵坐标用一定的关系关联起来，例如 $x_A^2 + y_A^2 = 1$
或 $y_A = 11 x_A^2 + 45 x_A + 14$。对于圆，你可以用“到圆心的距离为半径的点”表示圆上的点，用“到圆心的距离为半径的直线”表示切线。
